# hazid

./: TODO.md  manage.py  pyproject.toml
app_hazid/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
app_hazid/migrations/: 0001_initial.py
app_hazid/templates/app_hazid/: base.html  create_survey.html  detail.html  index.html  profile.html  qr.html  stats.html  winners.html
app_hazid/templates/registration/: login.html  register.html
app_hazid/templates/registration/password_change/: password_change_form.html
app_users/: admin.py  forms.py  models.py
app_users/migrations/: 0001_initial.py  0002_alloweduser_alter_customuser_options.py  0003_alter_customuser_first_name_and_more.py
project_hazid/: asgi.py  settings.py  urls.py  wsgi.py
